--- a/TestTask/composer.json
+++ b/TestTask/composer.json
@@ -1,18 +1,8 @@
 {
-    "name": "mihru/test",
-    "description": "test",
-    "type": "project",
-    "license": "free",
     "autoload": {
         "psr-4": {
-            "App\\": "src/App"
+            "App\\":"App/"
         }
-    },
-    "authors": [
-        {
-            "name": "misha"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {}
+    }
+
 }
